--- a/server/package.json
+++ b/server/package.json
@@ -5,9 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "./node_modules/nodemon/bin/nodemon.js src/app.js --exec 'npm run lint && node' ",
-    "lint": "./node_modules/.bin/eslint .", 
+    "lint": "./node_modules/.bin/eslint .",
     "buglint": "./node_modules/.bin/eslint **/*.js"
-
   },
   "author": "",
   "license": "ISC",
@@ -16,7 +15,9 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "sequelize": "^6.3.5",
+    "sqlite3": "^5.0.1"
   },
   "devDependencies": {
     "eslint": "^7.16.0",
